[project]
name = "rclone-explorer"
version = "1.0.0"
description = "Interactive CLI for browsing rclone remotes"
authors = [{name = "Gabor Vecsei"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
keywords = ["rclone", "cli"]

[project.urls]
Homepage = "https://gaborvecsei.com"
Repository = "https://github.com/gaborvecsei/rclone-explorer-cli"

[project.scripts]
rclone-explorer = "rclone_explorer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
